# 设置 CMake 最低版本要求
cmake_minimum_required(VERSION 3.10)

# 设置项目名称
project(ciftl_core VERSION 1.0.0.1 LANGUAGES CXX)

# 设置相关头文件路径
set(CIFTL_CORE_HOME_INCLUDE_PATH "${PROJECT_SOURCE_DIR}/include/")
set(CIFTL_CORE_INCLUDE_PATH "${CIFTL_CORE_HOME_INCLUDE_PATH}/ciftl_core/")
set(CIFTL_ENCODING_INCLUDE_PATH "${CIFTL_CORE_INCLUDE_PATH}/encoding/")
set(CIFTL_ETC_INCLUDE_PATH "${CIFTL_CORE_INCLUDE_PATH}/etc/")
set(CIFTL_HASH_INCLUDE_PATH "${CIFTL_CORE_INCLUDE_PATH}/hash/")
set(CIFTL_CRYPTER_INCLUDE_PATH "${CIFTL_CORE_INCLUDE_PATH}/crypter/")
# 设置相关源文件路径
set(CIFTL_CORE_SOURCE_PATH "${PROJECT_SOURCE_DIR}/src/")
set(CIFTL_ENCODING_SOURCE_PATH "${CIFTL_CORE_SOURCE_PATH}/encoding/")
set(CIFTL_ETC_SOURCE_PATH "${CIFTL_CORE_SOURCE_PATH}/etc/")
set(CIFTL_HASH_SOURCE_PATH "${CIFTL_CORE_SOURCE_PATH}/hash/")
set(CIFTL_CRYPTER_SOURCE_PATH "${CIFTL_CORE_SOURCE_PATH}/crypter/")
# 添加头文件
file(GLOB CIFTL_ENCODING_HEADER "${CIFTL_ENCODING_INCLUDE_PATH}/*.h")
file(GLOB CIFTL_ETC_HEADER "${CIFTL_ETC_INCLUDE_PATH}/*.h")
file(GLOB CIFTL_HASH_HEADER "${CIFTL_HASH_INCLUDE_PATH}/*.h")
file(GLOB CIFTL_CRYPTER_HEADER "${CIFTL_CRYPTER_INCLUDE_PATH}/*.h")
# 添加源文件
file(GLOB CIFTL_ENCODING_SOURCE "${CIFTL_ENCODING_SOURCE_PATH}/*.cpp")
file(GLOB CIFTL_ETC_SOURCE "${CIFTL_ETC_SOURCE_PATH}/*.cpp")
file(GLOB CIFTL_HASH_SOURCE "${CIFTL_HASH_SOURCE_PATH}/*.cpp")
file(GLOB CIFTL_CRYPTER_SOURCE "${CIFTL_CRYPTER_SOURCE_PATH}/*.cpp")

# 添加搜寻目录
include_directories(CIFTL_CORE_HOME_INCLUDE_PATH)

find_package(OpenSSL REQUIRED)
find_package(Crc32c CONFIG REQUIRED)
find_package(Botan REQUIRED)


# 添加源文件
add_library(${PROJECT_NAME}
        ${CIFTL_ENCODING_HEADER}
        ${CIFTL_ETC_HEADER}
        ${CIFTL_HASH_HEADER}
        ${CIFTL_CRYPTER_HEADER}
        ${CIFTL_ENCODING_SOURCE}
        ${CIFTL_ETC_SOURCE}
        ${CIFTL_HASH_SOURCE}
        ${CIFTL_CRYPTER_SOURCE}
)

target_link_libraries(${PROJECT_NAME} PRIVATE OpenSSL::SSL OpenSSL::Crypto Crc32c::crc32c Botan::Botan)

# 添加单元测试
enable_testing()
add_subdirectory(tests)
